[gd_scene load_steps=9 format=3 uid="uid://knbm3o2gdioq"]

[ext_resource type="Shader" path="res://blur.gdshader" id="1_lsyxl"]
[ext_resource type="Script" path="res://Assets/pause_menu.gd" id="2_xy121"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ib8d"]
shader = ExtResource("1_lsyxl")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2u2x"]
shader = ExtResource("1_lsyxl")
shader_parameter/blur = null
shader_parameter/brightness = null

[sub_resource type="Animation" id="Animation_2tju7"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [1.0, 0.85]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fqpv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lw6t0"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1evan"]
_data = {
"Pause": SubResource("Animation_2tju7"),
"RESET": SubResource("Animation_fqpv2"),
"Unpause": SubResource("Animation_lw6t0")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_3ib8d")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_xy121")

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1024, 512)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="Botao_resumir" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Resumir"

[node name="Botao_reiniciar" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Reiniciar"

[node name="Botao_opcoes" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Opções"

[node name="Botao_sair" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Sair"

[node name="Botao_restart_checkpoint" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "restart.docheckpoint()"

[node name="Opcoes" type="Control" parent="CenterContainer/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes"]
material = SubResource("ShaderMaterial_n2u2x")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="Master" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Som                     "
horizontal_alignment = 1

[node name="Sliders" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Master_slider" type="HSlider" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes/HBoxContainer/Sliders"]
custom_minimum_size = Vector2(512, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
value = 30.0
rounded = true
tick_count = 20

[node name="Botao_volta" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/Opcoes"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_1evan")
}

[connection signal="value_changed" from="CenterContainer/PanelContainer/MarginContainer/Opcoes/HBoxContainer/Sliders/Master_slider" to="." method="_on_master_slider_value_changed"]
